@@ -29,7 +29,7 @@ function make_favorite_graphs() {
 	$graphids = array();
 	$itemids = array();
 
-	$fav_graphs = get_favorites('web.favorite.graphids');
+	$fav_graphs = CFavorite::get('web.favorite.graphids');
 	foreach ($fav_graphs as $favorite) {
 		if ('itemid' == $favorite['source']) {
 			$itemids[$favorite['value']] = $favorite['value'];
@@ -88,7 +88,7 @@ function make_favorite_graphs() {
 
 function make_favorite_screens() {
 	$favList = new CList(null, 'favorites');
-	$fav_screens = get_favorites('web.favorite.screenids');
+	$fav_screens = CFavorite::get('web.favorite.screenids');
 	$screenids = array();
 	foreach ($fav_screens as $favorite) {
 		if ('screenid' == $favorite['source']) {
@@ -134,7 +134,7 @@ function make_favorite_screens() {
 
 function make_favorite_maps() {
 	$favList = new CList(null, 'favorites');
-	$fav_sysmaps = get_favorites('web.favorite.sysmapids');
+	$fav_sysmaps = CFavorite::get('web.favorite.sysmapids');
 	$sysmapids = array();
 
 	foreach ($fav_sysmaps as $favorite) {
@@ -1125,7 +1125,7 @@ function make_graph_submenu() {
 	$graphids = array();
 	$itemids = array();
 
-	$fav_graphs = get_favorites('web.favorite.graphids');
+	$fav_graphs = CFavorite::get('web.favorite.graphids');
 	foreach ($fav_graphs as $key => $favorite) {
 		if ('itemid' == $favorite['source']) {
 			$itemids[$favorite['value']] = $favorite['value'];
@@ -1222,7 +1222,7 @@ function make_sysmap_menu(&$menu, &$submenu) {
 }
 
 function make_sysmap_submenu() {
-	$fav_sysmaps = get_favorites('web.favorite.sysmapids');
+	$fav_sysmaps = CFavorite::get('web.favorite.sysmapids');
 	$favMaps = array();
 	$sysmapids = array();
 	foreach ($fav_sysmaps as $favorite) {
@@ -1273,7 +1273,7 @@ function make_screen_menu(&$menu, &$submenu) {
 }
 
 function make_screen_submenu() {
-	$fav_screens = get_favorites('web.favorite.screenids');
+	$fav_screens = CFavorite::get('web.favorite.screenids');
 	$screenids = array();
 	foreach ($fav_screens as $favorite) {
 		if ('screenid' == $favorite['source']) {
